src/stored-value.h
@@ -1076,7 +1076,9 @@ public:
                 /* allow operation*/
                 v->unlock();
             } else if (cas && cas != v->getCas()) {
-                if (v->isTempDeletedItem() || v->isTempNonExistentItem()) {
+                if (v->isTempDeletedItem() ||
+                    v->isTempNonExistentItem() ||
+                    v->isDeleted()) {
                     return NOT_FOUND;
                 }
                 return INVALID_CAS;
